tests/machine/x/java/outer_join.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsouter_join764085333/001/OuterJoin.java:44: error: incompatible types: Object cannot be converted to CustomersIdName
			_res3.add(new ResultCustomerOrder(o, c));
			                                     ^
/tmp/TestCompileValidProgramsouter_join764085333/001/OuterJoin.java:50: error: incompatible types: Object cannot be converted to OrdersCustomerIdIdTotal
			_res3.add(new ResultCustomerOrder(o, c));
			                                  ^
/tmp/TestCompileValidProgramsouter_join764085333/001/OuterJoin.java:58: error: incompatible types: OrdersCustomerIdIdTotal cannot be converted to boolean
		if (row.order) {
		       ^
/tmp/TestCompileValidProgramsouter_join764085333/001/OuterJoin.java:59: error: incompatible types: CustomersIdName cannot be converted to boolean
			if (row.customer) {
			       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors


  1| let customers = [
  2|   { id: 1, name: "Alice" },